pacman/pacman-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pacman
  namespace: pacman
spec:
  path: /
  to:
    name: pacman
    weight: 100
    kind: Service
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: 8080-tcp
  alternateBackends: []
